Добавлен тест на заказ Самоката

--- a/src/main/resources/mainPage/impotantQuestion.properties
+++ b/src/main/resources/mainPage/impotantQuestion.properties
@@ -1,4 +1,2 @@
-default_url=/registrator
-departament_selector=css = nz-select-search > input
-impotant_ask_question_list=xpath = //*[@class='accordion__heading']
-impotant_ask_answer_list=xpath = //*[@class='accordion__panel']/p
+impotant_ask_question_list xpath = //*[@class='accordion__heading']
+impotant_ask_answer_list xpath = //*[@class='accordion__panel']/p
