--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <slf4j.version>2.0.0-alpha1</slf4j.version>
         <aspectjweaver.version>1.9.7</aspectjweaver.version>
         <webdrivermanager>5.5.2</webdrivermanager>
+        <faker.version>1.0.2</faker.version>
     </properties>
     <dependencies>
         <dependency>
@@ -116,6 +117,11 @@
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.9.1</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${faker.version}</version>
         </dependency>
     </dependencies>
 
